Bug fix repick from group on shuffle ensure overflow not hidden on mobile

--- a/handheld.css
+++ b/handheld.css
@@ -56,6 +56,8 @@ ul.qlist li {
 	margin-top: 0px;
 }
 div.inset {
+	position: relative;
+	overflow: visible;
 	margin-left: 0px;
 	margin-right: 0px;
 }
